--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@genkit-ai/next": "^1.14.1",
     "@hookform/resolvers": "^4.1.3",
     "@nhost/nextjs": "^2.2.9",
+    "@nhost/react": "^1.1.1",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -68,3 +69,5 @@
     "typescript": "^5"
   }
 }
+
+    
